--- a/src/pages/scoreboard/Scoreboard.module.css
+++ b/src/pages/scoreboard/Scoreboard.module.css
@@ -6,7 +6,7 @@ body {
   text-transform: uppercase;
 }
 
-header {
+.header {
   color: #FFF;
   padding: 5px 10px;
   text-align: center;
@@ -16,7 +16,7 @@ header {
   border-bottom: solid 2px #D4CAFF;
 }
 
-header h1 {
+.header h1 {
   flex-grow: 1;
   font-size: 1.5em;
   letter-spacing: 2px;
@@ -25,12 +25,12 @@ header h1 {
 
 /* FORMS */
 
-form {
+.form {
   display: flex;
   background-color: #8063FA;
 }
 
-input[type=text] {
+.input[type=text] {
   flex-grow: 1;
   border-width: 0 0 1px 0;
   margin: 15px 10px 15px 15px;
@@ -111,7 +111,9 @@ svg {
   display: flex;
   font-size: 1.2em;
   border-bottom: solid 2px #EEEEEE;
+  border-left: solid 2px #EEEEEE;
   letter-spacing: 2px;
+  
 }
 
   .player:last-of-type {
@@ -147,7 +149,7 @@ svg {
 
 .stats,
 .stopwatch {
-  width: 170px;
+  width: 190px;
 }
 
 .stats {
